dev updates to A-lab release tests

--- a/notebooks/release_tests.ipynb
+++ b/notebooks/release_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,378 @@
     "from path import Path\n",
     "from Bio import Seq, SeqIO, AlignIO, Phylo, Align\n",
     "sys.path.append('../src/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meta_fp = '/home/al/code/HCoV-19-Genomics/metadata.csv'\n",
+    "meta_df = pd.read_csv(meta_fp)\n",
+    "# meta_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# meta_df.to_csv('/home/al/code/HCoV-19-Genomics/metadata.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "138"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tijuana\n",
+    "435-297"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# LA\n",
+    "11 - 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "152"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SD\n",
+    "4460 - 4308"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Davis\n",
+    "1 - 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>gb_accession</th>\n",
+       "      <th>gisaid_accession</th>\n",
+       "      <th>collection_date</th>\n",
+       "      <th>location</th>\n",
+       "      <th>percent_coverage_cds</th>\n",
+       "      <th>avg_depth</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>originating_lab</th>\n",
+       "      <th>fasta_hdr</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>Coverage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5579</th>\n",
+       "      <td>SEARCH-8301</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-03-17</td>\n",
+       "      <td>USA/California/Davis</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SEARCH Alliance San Diego with Aaron Harding, ...</td>\n",
+       "      <td>Sharp HealthCare Laboratory</td>\n",
+       "      <td>hCoV-19/USA/SEARCH-8301/2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               ID gb_accession gisaid_accession collection_date  \\\n",
+       "5579  SEARCH-8301          NaN              NaN      2021-03-17   \n",
+       "\n",
+       "                  location  percent_coverage_cds  avg_depth  \\\n",
+       "5579  USA/California/Davis                 100.0        NaN   \n",
+       "\n",
+       "                                                authors  \\\n",
+       "5579  SEARCH Alliance San Diego with Aaron Harding, ...   \n",
+       "\n",
+       "                  originating_lab                     fasta_hdr  zipcode  \\\n",
+       "5579  Sharp HealthCare Laboratory  hCoV-19/USA/SEARCH-8301/2021      NaN   \n",
+       "\n",
+       "      Coverage  \n",
+       "5579     100.0  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta_df.loc[meta_df['location']=='USA/California/Davis']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jordan/Amman                            483\n",
+       "Jordan/Aqaba                             41\n",
+       "Jordan/Irbid                             58\n",
+       "Jordan/Mafraq                             2\n",
+       "Jordan/Zarqa                              5\n",
+       "Mexico/Baja California/Ensenada           1\n",
+       "Mexico/Baja California/Mexicali           1\n",
+       "Mexico/Baja California/Rosarito           1\n",
+       "Mexico/Baja California/Tijuana          435\n",
+       "Mexico/Sonora/San Luis Río Colorado       2\n",
+       "USA/Arizona/Yuma                          1\n",
+       "USA/California/Cruise_Ship_1              8\n",
+       "USA/California/Cruise_Ship_2             32\n",
+       "USA/California/Davis                      1\n",
+       "USA/California/Imperial                 131\n",
+       "USA/California/Kern                       1\n",
+       "USA/California/Los Angeles               11\n",
+       "USA/California/Modesto                    1\n",
+       "USA/California/Orange                     3\n",
+       "USA/California/Riverside                 32\n",
+       "USA/California/San Bernardino             2\n",
+       "USA/California/San Diego               4460\n",
+       "USA/California/Santa Barbara              1\n",
+       "USA/California/Ventura                    1\n",
+       "USA/Louisiana/New Orleans               143\n",
+       "USA/West Virginia/Kanawha                 1\n",
+       "Name: location, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta_df['location'].value_counts().sort_index(ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>NC_045512.2</td>\n",
+       "      <td>27723</td>\n",
+       "      <td>27747</td>\n",
+       "      <td>SARS2_168_LEFT</td>\n",
+       "      <td>60</td>\n",
+       "      <td>+</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               0      1      2               3   4  5\n",
+       "148  NC_045512.2  27723  27747  SARS2_168_LEFT  60  +"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primer_fp = '/home/al/data/hcov19/primers/primer_2021-02-01/SARS2_short_primers_V3_no_adapter_sequences.bed'\n",
+    "primers = pd.read_csv(primer_fp, sep='\\t', header=None)\n",
+    "primers[(primers[1]<27746) & (primers[2]>27746)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>NC_045512.2</td>\n",
+       "      <td>27548</td>\n",
+       "      <td>27573</td>\n",
+       "      <td>SARS2_167_LEFT</td>\n",
+       "      <td>60</td>\n",
+       "      <td>+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>NC_045512.2</td>\n",
+       "      <td>27775</td>\n",
+       "      <td>27801</td>\n",
+       "      <td>SARS2_167_RIGHT</td>\n",
+       "      <td>60</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               0      1      2                3   4  5\n",
+       "146  NC_045512.2  27548  27573   SARS2_167_LEFT  60  +\n",
+       "147  NC_045512.2  27775  27801  SARS2_167_RIGHT  60  -"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primers[(primers[3].str.contains(\"167\"))]"
    ]
   },
   {
@@ -511,83 +883,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "meta_fp = '/home/al/code/HCoV-19-Genomics/metadata.csv'\n",
-    "meta_df = pd.read_csv(meta_fp)\n",
-    "meta_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# meta_df.to_csv('/home/al/code/HCoV-19-Genomics/metadata.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "3827-3575"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tijuana\n",
-    "283-275"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imperial\n",
-    "131-1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# riverside\n",
-    "28 -23"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# meta_df.loc[meta_df['location']=='MEX/Baja California/Tijuana', 'location'] = 'Mexico/Baja California/Tijuana'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "meta_df['location'].value_counts().sort_index(ascending=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -935,9 +1230,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bjorn",
+   "display_name": "bj",
    "language": "python",
-   "name": "bjorn"
+   "name": "bj"
   },
   "language_info": {
    "codemirror_mode": {
@@ -949,7 +1244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
